--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Read IP data from MaxMind DB files",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test/geoip-test.js test/reader-test.js && node --expose-gc test/memory-test.js"
+    "test": "mocha test/geoip-test.js test/reader-test.js test/api-test.js && node --expose-gc test/memory-test.js"
   },
   "repository": {
     "type": "git",
