--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: node_js
 node_js:
-- '0.12'
-- '0.10'
-- iojs
+  - stable
+  - '5'
+  - '4'
+  - '0.12'
+  - '0.10'
+
 deploy:
   provider: npm
   email: jt@gosquared.com
