Lots of changes to improve performance:
 * (biggest): remove homespun LRU, use hashlru - it's super-speedy
 * LRU cache now only contains values, rather than { value, ptr }
   records - the ptr wasn't used anyway
 * Improve decoding of IPv4s into numeric octets
 * Added variable for LRU_SIZE. Kept it at 5000 for now but it looks
   like tweaking this value can provide *amazing* speedups, but at
   the cost of using a lot more memory.
 * Inlined readDataType to eliminate a whole load of heap allocations
 * Reordered types in readData's switch by frequency
 * More passing of numbers around rather than boxed { value, ptr } -
   v8 seems to like inlining better this way
 * A few other very simple bits that probably don't make any difference:
   inlining some values; caching this.ip in .lookup()

Overall seems to be a (very roughly) 5x speed improvement. Comes at the
cost of a little more memory used by hashlru's double-object allocation
but that's largely negated by unboxing of {value,ptr} in the cache.

Also added --max-old-space-size arg to memory test to make it more reliable.

Plus an extra little note in readme about caching

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Read IP data from MaxMind DB files",
   "main": "index.js",
   "scripts": {
-    "test": "eslint . && mocha test/geoip-test.js test/reader-test.js test/api-test.js test/lru-test.js && node --expose-gc test/memory-test.js"
+    "test": "eslint . && mocha test/geoip-test.js test/reader-test.js test/api-test.js && node --max-old-space-size=32 --expose-gc test/memory-test.js"
   },
   "repository": {
     "type": "git",
