--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mocha": "^2.2.5"
   },
   "dependencies": {
-    "big-integer": "^1.5.4"
+    "big-integer": "^1.5.4",
+    "hashlru": "^2.0.0"
   }
 }
