--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "big-integer": "^1.5.4",
-    "hashlru": "^2.0.0"
+    "hashlru": "^2.0.0",
+    "maxmind": "^3.1.2"
   }
 }
